# py-a2a-dapr

./: .gitignore  .pre-commit-config.yaml  AUTHORS.md  LICENSE  README.md  dapr.yaml  pyproject.toml  run_tests.sh  start_dapr_multi.sh  stop_dapr_multi.sh
.github/workflows/: uv-pytest.yml
docs/images/: py-a2a-dapr.excalidraw
src/py_a2a_dapr/: __init__.py  hello.py
src/py_a2a_dapr/actor/: echo.py  echo_task.py  hello_world.py  task.py
src/py_a2a_dapr/client/: a2a.py  demo.py
src/py_a2a_dapr/executor/: echo.py  echo_task.py  hello_world.py
src/py_a2a_dapr/model/: echo_task.py  task.py
src/py_a2a_dapr/server/: a2a.py  dapr.py  echo_a2a.py
src/py_a2a_dapr/web/: gradio.py
tests/: test_cli.py  test_hello.py
